public/lite/api/zh-CN/r1.8/_sources/generate/program_listing_file_include_converter_include_core_ops_attention.h.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _program_listing_file_include_converter_include_core_ops_attention.h:

Program Listing for File attention.h
====================================

|exhale_lsh| :ref:`Return to documentation for file <file_include_converter_include_core_ops_attention.h>` (``include/converter/include/core/ops/attention.h``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. code-block:: cpp

   
   #ifndef LITE_MINDSPORE_LITE_TOOLS_CONVERTER_OPS_ATTENTION_H_
   #define LITE_MINDSPORE_LITE_TOOLS_CONVERTER_OPS_ATTENTION_H_
   #include <map>
   #include <vector>
   #include <string>
   #include <memory>
   
   #include "ops/base_operator.h"
   #include "mindapi/base/types.h"
   
   namespace mindspore {
   namespace ops {
   constexpr auto kNameAttention = "Attention";
   class MIND_API Attention : public BaseOperator {
    public:
     MIND_API_BASE_MEMBER(Attention);
     Attention() : BaseOperator(kNameAttention) {
       InitIOName(
         {"q", "k", "v", "weight_q", "weight_k", "weight_v", "weight_o", "bias_q", "bias_k", "bias_v", "bias_o", "mask"},
         {"output"});
     }
     void Init() const {}
   };
   }  // namespace ops
   }  // namespace mindspore
   #endif  // LITE_MINDSPORE_LITE_TOOLS_CONVERTER_OPS_ATTENTION_H_
